implements pages and basic href links

--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,6 +1,7 @@
 <div id='container'>
-<!-- Your code here -->
-
+  <input type='text'>
+  <button>Shorten</button>
+  <a href="#/links"><strong>Links</strong></a>
 </div>
 
 
