--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,3 +1,6 @@
 <div id='container'>
-  <!-- Your html here -->
+  <a href="#/shorten"><strong>Go back</strong></a>
+  <ul>
+    <!-- <li ng-repeat=""></li> -->
+  </ul>
 </div>
