--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -3,7 +3,7 @@
   <form name="signinForm" ng-submit='signin()'>
     <input type='text'ng-model='user.username'>
     <input type="password" ng-model='user.password'>
-    <button>signin</button>
+    <button>Sign In</button>
   </form>
   <a href="#/signup">Don't have an account? <strong>Signup</strong> ...</a>
 </div>
